# django-debug-toolbar

./: .coveragerc  .editorconfig  .eslintrc.js  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NEWS  README.rst  eslint.config.js  package.json  pyproject.toml  requirements_dev.txt  runtests.py  setup.cfg  setup.py  test_pgsql.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: coverage.yml  release.yml  test.yml
.tx/: config
debug_toolbar/: __init__.py  _compat.py  _stubs.py  apps.py  compat.py  db_store.py  decorators.py  forms.py  middleware.py  models.py  runtests.py  settings.py  store.py  stubs.py  toolbar.py  urls.py  utils.py  views.py
debug_toolbar/debug/: headers.py  settings_vars.py  timer.py  version.py
debug_toolbar/locale/ar/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/bg/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/ca/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/cs/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/de/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/en/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/es/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/fa/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/fi/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/fr/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/he/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/id/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/it/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/ja/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/ko/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/mk/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/nl/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/pl/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/pt/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/ro/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/ru/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/sk/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/sv_SE/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/tr/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/uk/LC_MESSAGES/: django.mo  django.po
debug_toolbar/locale/zh_CN/LC_MESSAGES/: django.mo  (+1 more)
debug_toolbar/management/commands/: debugsqlshell.py
debug_toolbar/media/: Makefile  jquery.cookie.min.js  jquery.js  toolbar.css  toolbar.js  toolbar.min.css  toolbar.min.js
debug_toolbar/media/debug_toolbar/: Makefile  toolbar.css  toolbar.js  toolbar.min.css  toolbar.min.js
debug_toolbar/migrations/: 0001_initial.py
debug_toolbar/panels/: .signals.py.swp  __init__.py  ajax.py  alerts.py  cache.py  headers.py  htmlvalidator.py  http_vars.py  logger.py  logging.py  profiling.py  redirects.py  redis_logger.py  request.py  request_vars.py  settings.py  settings_vars.py  signals.py  sql.py  sqlwarnings.py  state.py  staticfiles.py  template.py  timer.py  version.py  versions.py
debug_toolbar/panels/history/: __init__.py  forms.py  panel.py  views.py
debug_toolbar/panels/sql/: __init__.py  forms.py  panel.py  tracking.py  utils.py  views.py
debug_toolbar/panels/template/: __init__.py  panel.py  views.py
debug_toolbar/panels/templates/: __init__.py  decorators.py  jinja2.py  panel.py  utils.py  views.py
debug_toolbar/templates/debug_toolbar/: base.html  base_with_js.html  file.html  redirect.html  stacktrace.html
debug_toolbar/templatetags/: debug_toolbar_compat.py  debug_toolbar_extras.py  debug_toolbar_utils.py
debug_toolbar/tests/: __init__.py  test_sql_panel.py  tests.py  urls.py
debug_toolbar/toolbar/: loader.py
debug_toolbar/utils/: __init__.py  functional.py  settings.py  sql.py
debug_toolbar/utils/compat/: db.py
debug_toolbar/utils/sqlparse/: __init__.py  filters.py  formatter.py  keywords.py  lexer.py  sql.py  tokens.py
debug_toolbar/utils/tracking/: __init__.py  db.py
docs/: Makefile  architecture.rst  changes.rst  checks.rst  commands.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  panels.rst  spelling_wordlist.txt  tips.rst
example/: README.rst  asgi.py  example.db  manage.py  models.py  screenshot.py  settings.py  test_views.py  urls.py  views.py  wsgi.py
example/async_/: settings.py  urls.py  views.py
example/templates/: async_db.html  bad_form.html  index.html
example/templates/admin/: login.html
example/templates/htmx/: boost.html
example/templates/jinja2/: index.jinja
example/templates/jquery/: index.html
example/templates/mootools/: index.html
example/templates/prototype/: index.html
example/templates/turbo/: index.html
tests/: __init__.py  asgi.py  base.py  context_processors.py  forms.py  loaders.py  middleware.py  middlewares.py  models.py  selenium_utils.py  settings.py  sync.py  test_checks.py  test_csp_rendering.py  test_decorators.py  test_forms.py  test_integration.py  test_integration_async.py  test_javascript.py  test_login_not_required.py  test_middleware_compatibility.py  test_store.py  test_toolbar.py  test_utils.py  tests.py  urls.py  urls_invalid.py  urls_use_package_urls.py  utils.py  views.py
tests/additional_static/: base.css
tests/commands/: test_debugsqlshell.py
tests/panels/: test_alerts.py  test_async_panel_compatibility.py  test_cache.py  test_custom.py  test_history.py  test_logger.py  test_logging.py  test_profiling.py  test_redirects.py  test_request.py  test_request_vars.py  test_settings.py  test_sql.py  test_sqlwarnings.py  test_staticfiles.py  test_template.py  test_versions.py
tests/templates/: base.html  basic.html
tests/templates/ajax/: ajax.html
tests/templates/jinja2/: basic.jinja
tests/templates/sql/: flat.html  included.html  nested.html
tests/templates/staticfiles/: async_static.html
(+61 files in other folders)
