[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "django-debug-toolbar"
description = "A configurable set of panels that display various debug information about the current request/response."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
authors = [
    { name = "Rob Hudson" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
  "version",
]
dependencies = [
  "Django>=3.2.4",
  "sqlparse>=0.2",
]
[project.urls]
Download = "https://pypi.org/project/django-debug-toolbar/"
Homepage = "https://github.com/jazzband/django-debug-toolbar"

[tool.hatch.build.targets.wheel]
packages = ["debug_toolbar"]

[tool.hatch.version]
path = "debug_toolbar/__init__.py"

[tool.ruff]
extend-select = [
  # pyflakes, pycodestyle
  "F", "E", "W",
  # mmcabe
  # "C90",
  # isort
  "I",
  # pep8-naming
  # "N",
  # pyupgrade
  "UP",
  # flake8-2020
  # "YTT",
  # flake8-boolean-trap
  "FBT",
  # flake8-bugbear
  "B",
  # flake8-builtins
  # "A",
  # flake8-comprehensions
  "C4",
  # flake8-django
  "DJ",
  # flake8-logging-format
  "G",
  # flake8-pie
  "PIE",
  # flake8-simplify
  "SIM",
  # flake8-gettext
  "INT",
  # pygrep-hooks
  "PGH",
  # pylint
  # "PL",
  # unused noqa
  "RUF100",
]
extend-ignore = [
  # Allow zip() without strict=
  "B905",
  # No line length errors
  "E501",
]
fix = true
show-fixes = true
target-version = "py38"

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.per-file-ignores]
"*/migrat*/*" = [
  # Allow using PascalCase model names in migrations
  "N806",
  # Ignore the fact that migration files are invalid module names
  "N999",
]

[tool.coverage.html]
skip_covered = true
skip_empty = true

[tool.coverage.run]
branch = true
parallel = true
source = ["debug_toolbar"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
# Update coverage badge link in README.rst when fail_under changes
fail_under = 94
show_missing = true
