[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "django-debug-toolbar"
description = "A configurable set of panels that display various debug information about the current request/response."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
authors = [
    { name = "Rob Hudson" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
  "version",
]
dependencies = [
  "Django>=4.2.9",
  "sqlparse>=0.2",
]
[project.urls]
Download = "https://pypi.org/project/django-debug-toolbar/"
Homepage = "https://github.com/jazzband/django-debug-toolbar"

[tool.hatch.build.targets.wheel]
packages = ["debug_toolbar"]

[tool.hatch.version]
path = "debug_toolbar/__init__.py"

[tool.ruff]
fix = true
show-fixes = true
target-version = "py38"

[tool.ruff.lint]
extend-select = [
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "C90",    # McCabe cyclomatic complexity
  "DJ",     # flake8-django
  "E",      # pycodestyle errors
  "F",      # Pyflakes
  "FBT",    # flake8-boolean-trap
  "I",      # isort
  "INT",    # flake8-gettext
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "RUF100", # Unused noqa directive
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]
extend-ignore = [
  "B905",   # Allow zip() without strict=
  "E501",   # Ignore line length violations
  "SIM108", # Use ternary operator instead of if-else-block
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.ruff.lint.per-file-ignores]
"*/migrat*/*" = [
  "N806",  # Allow using PascalCase model names in migrations
  "N999",  # Ignore the fact that migration files are invalid module names
]

[tool.coverage.html]
skip_covered = true
skip_empty = true

[tool.coverage.run]
branch = true
parallel = true
source = ["debug_toolbar"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
# Update coverage badge link in README.rst when fail_under changes
fail_under = 94
show_missing = true
