[egg_info]
tag_svn_revision = false

[flake8]
ignore = W504, W601
max-line-length = 100

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = debug_toolbar
multi_line_output = 5
not_skip = __init__.py

[bdist_wheel]
universal = 1

[metadata]
license-file = LICENSE
