[metadata]
name = django-debug-toolbar
version = 3.0a1
description = A configurable set of panels that display various debug information about the current request/response.
long_description = file: README.rst
author = Rob Hudson
author_email = rob@cogit8.org
url = https://github.com/jazzband/django-debug-toolbar
download_url = https://pypi.org/project/django-debug-toolbar/
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.5
install_requires =
    Django >= 2.2
    sqlparse >= 0.2.0
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    example
    tests
    tests.*

[flake8]
exclude = conf.py
ignore = E203,W503
max-line-length = 88

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = debug_toolbar
multi_line_output = 3
line_length = 88
