[metadata]
name = django-debug-toolbar
version = 3.3.0
description = A configurable set of panels that display various debug information about the current request/response.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Rob Hudson
author_email = rob@cogit8.org
url = https://github.com/jazzband/django-debug-toolbar
download_url = https://pypi.org/project/django-debug-toolbar/
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
install_requires =
    Django >= 3.2
    sqlparse >= 0.2.0
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    example
    tests
    tests.*


[coverage.html]
skip_covered = True
skip_empty = True

[coverage:run]
branch = True
parallel = True
source = debug_toolbar

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
# Update coverage badge link in README.rst when fail_under changes
fail_under = 89
show_missing = True

[flake8]
extend-ignore = E203, E501

[isort]
combine_as_imports = true
profile = black
